<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/step_video"
            style="@style/step_detail_media_style" />

        <ImageView
            android:id="@+id/step_image"
            android:contentDescription="@string/step_image_ct"
            android:scaleType="centerCrop"
            android:visibility="gone"
            style="@style/step_detail_media_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/marginBig"
            android:orientation="vertical">

            <TextView
                android:id="@+id/step_title_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/marginNormal"
                android:gravity="center_horizontal"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/label_textSize"
                tools:text="@string/ingredients_detail_label" />

            <TextView
                android:id="@+id/step_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:text="@string/description_placeholder" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
